--- a/code/Proj1_EDA.ipynb
+++ b/code/Proj1_EDA.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Proj1_EDA.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -44,7 +45,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -52,17 +53,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 204
         },
         "id": "npUinKCXbzYO",
-        "outputId": "570f0831-6f75-4f73-8c66-8ddcac423604"
+        "outputId": "b1f18337-3f37-4c0b-dd8f-456e67fac31c"
       },
       "source": [
         "data = pd.read_csv('/content/vgames2.csv')\n",
         "data = data.drop(columns=\"Unnamed: 0\")\n",
         "data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +175,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 34
         }
       ]
     },
@@ -185,12 +186,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Np5-EWSecVRa",
-        "outputId": "a622aded-b2dd-4ba9-f513-046a34aad591"
+        "outputId": "d04ece17-abe6-452b-fc85-16784773c40f"
       },
       "source": [
         "data.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +201,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 35
         }
       ]
     },
@@ -220,12 +221,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "whAViAu6fh0X",
-        "outputId": "643886f8-0389-476c-c0a0-8dc77a177e74"
+        "outputId": "d7250faf-ba90-4faa-9b40-e4cabe91e8d0"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 4,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,15 +257,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 204
         },
         "id": "agPk3nM4cv53",
-        "outputId": "65b8c66a-e235-426b-d823-44f89c3e741f"
+        "outputId": "ed270dc3-e643-4c49-a782-04f4dbeab9a3"
       },
       "source": [
         "data[data.Year.isna() == True].head()"
       ],
-      "execution_count": 5,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 37
         }
       ]
     },
@@ -385,15 +386,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 204
         },
         "id": "EQQrw7UTeF5a",
-        "outputId": "7defa58a-3318-4269-856b-144050427e4f"
+        "outputId": "11288780-106e-420a-8fb2-b776a55117f5"
       },
       "source": [
         "data[data.Genre.isna() == True].head()"
       ],
-      "execution_count": 6,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +506,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 38
         }
       ]
     },
@@ -514,15 +515,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 204
         },
         "id": "s6SOvh2EfreS",
-        "outputId": "0d511d4a-b16d-4d67-a092-50a06e0557dd"
+        "outputId": "d37adcbe-f9f6-4776-86f6-1ba0d05d4445"
       },
       "source": [
         "data[data.Publisher.isna() == True].head()"
       ],
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,7 +635,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 39
         }
       ]
     },
@@ -645,12 +646,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VV2DE41nf2HJ",
-        "outputId": "5d22c1fe-c17a-45ed-fcc0-f9a46d2ba588"
+        "outputId": "1cfc2479-d060-4047-af88-cf2825f7c455"
       },
       "source": [
         "data.isna().sum()"
       ],
-      "execution_count": 8,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +670,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 40
         }
       ]
     },
@@ -716,7 +717,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "skan-duYiLIz",
-        "outputId": "c0afc22e-5e4d-45a7-cdc2-9d31a15bf48f"
+        "outputId": "9d45797c-f92c-45a3-be7c-ccc388c9dc79"
       },
       "source": [
         "years = data.Year.unique()\n",
@@ -728,7 +729,7 @@
         "\n",
         "tmp"
       ],
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +761,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 41
         }
       ]
     },
@@ -785,7 +786,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EJGmEQ49jRNo",
-        "outputId": "79d2cfb7-a430-4201-de23-4abed145e326"
+        "outputId": "a3c0c17b-de34-4352-a211-975e332e4d93"
       },
       "source": [
         "condition1 = data.Year.values <= 80\n",
@@ -797,7 +798,7 @@
         "\n",
         "data.Year.value_counts()"
       ],
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +847,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 42
         }
       ]
     },
@@ -869,15 +870,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 538
+          "height": 419
         },
         "id": "ILClTTSinxdf",
-        "outputId": "f873fd21-71db-45d0-a218-0016680f7a8e"
+        "outputId": "74f429b0-daa1-4f2d-e17b-894453e91f7f"
       },
       "source": [
         "data[data.Year.isna()]"
       ],
-      "execution_count": 11,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1069,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 43
         }
       ]
     },
@@ -1079,12 +1080,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pWR0rVttoChn",
-        "outputId": "b593bd85-a197-4dea-f6d2-0d32cee050f1"
+        "outputId": "598c8d29-43ff-4cce-90fb-f3be7d374998"
       },
       "source": [
         "data.Year.isna().sum()"
       ],
-      "execution_count": 12,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,9 +1095,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 44
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wq03YLjiXFzk"
+      },
+      "source": [
+        "data_1 = data.copy() #  Publisher 은  반드시 들어갈 내용이 없기 때문"
+      ],
+      "execution_count": 45,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1106,7 +1118,7 @@
       "source": [
         "data = data.dropna()"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1116,12 +1128,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aQ82TJbGSYF-",
-        "outputId": "47a8877f-2d7a-4135-8d7f-b93aa3298619"
+        "outputId": "73540bbb-e7b8-4c86-e08f-7630e51d4be6"
       },
       "source": [
         "data.isna().sum()"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1140,7 +1152,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     },
@@ -1149,15 +1161,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 640
+          "height": 419
         },
         "id": "xTLXjbMjSeGG",
-        "outputId": "2798b6b2-521f-40cc-82a2-bd64038c352a"
+        "outputId": "6ebf9743-5bd8-4964-b4ba-2081de37c92f"
       },
       "source": [
         "data"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1348,7 +1360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 18
         }
       ]
     },
@@ -1359,12 +1371,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5kVuS6nASs09",
-        "outputId": "4000a5e3-03f2-4695-8b45-4feda3c3c912"
+        "outputId": "e2544df6-96cc-4040-8dce-eb494306718d"
       },
       "source": [
         "data.Genre.unique()"
       ],
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1376,7 +1388,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 19
         }
       ]
     },
@@ -1397,7 +1409,7 @@
       "source": [
         "data[data.columns[2]] = data[data.columns[2]].astype(int)"
       ],
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1419,12 +1431,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ROwV2HRbTvWF",
-        "outputId": "2da938bb-9c6f-4a57-f241-81b41cb4a4d8"
+        "outputId": "e32128d7-5d66-4d6f-98d4-3331ec142922"
       },
       "source": [
         "data.NA_Sales.value_counts()"
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,16 +1448,16 @@
               "0.01      516\n",
               "0.04      515\n",
               "         ... \n",
-              "3.14        1\n",
-              "4.18        1\n",
-              "8.52        1\n",
-              "1.18M       1\n",
-              "2.89        1\n",
+              "80K         1\n",
+              "11.27       1\n",
+              "6.05        1\n",
+              "2.66M       1\n",
+              "0.29M       1\n",
               "Name: NA_Sales, Length: 489, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 21
         }
       ]
     },
@@ -1456,33 +1468,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zLstnZ6gUKd1",
-        "outputId": "31b61bde-16d2-436d-c1a0-af7f486b4952"
+        "outputId": "0377f087-3a76-433b-d766-6a3285fc540f"
       },
       "source": [
         "data.EU_Sales.value_counts()"
       ],
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0       5543\n",
-              "0.01    1443\n",
-              "0.02    1230\n",
-              "0.03     905\n",
-              "0.04     719\n",
-              "        ... \n",
-              "2.4        1\n",
-              "2.12       1\n",
-              "3.42       1\n",
-              "3.4        1\n",
-              "2.64       1\n",
+              "0        5543\n",
+              "0.01     1443\n",
+              "0.02     1230\n",
+              "0.03      905\n",
+              "0.04      719\n",
+              "         ... \n",
+              "2.86        1\n",
+              "2.12        1\n",
+              "1350K       1\n",
+              "8.03        1\n",
+              "4.52        1\n",
               "Name: EU_Sales, Length: 360, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 22
         }
       ]
     },
@@ -1502,15 +1514,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 419
         },
         "id": "jkgZJt69UJnH",
-        "outputId": "f510a144-e3e8-42e5-9558-6ff79506bfd4"
+        "outputId": "bb0d0581-33a5-476f-a706-99c1f1f1ba6a"
       },
       "source": [
         "data[data.NA_Sales.str.contains('K')]"
       ],
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1701,7 +1713,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 23
         }
       ]
     },
@@ -1710,15 +1722,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 538
+          "height": 419
         },
         "id": "2yTDh_qlVbqE",
-        "outputId": "f44ec7d8-f594-4821-d36c-6d7bfef65b9a"
+        "outputId": "c9a8ee4d-8dd0-47f2-997c-c42cb2d8d2e4"
       },
       "source": [
         "data[data.NA_Sales.str.contains('M')]"
       ],
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1909,7 +1921,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 24
         }
       ]
     },
@@ -1936,7 +1948,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FnyVZcUsVgRY",
-        "outputId": "04e2ae9c-f8dc-41d4-e291-f80850ba936e"
+        "outputId": "6687db03-e804-4164-d29b-376832ba44a6"
       },
       "source": [
         "# Sales\n",
@@ -1955,28 +1967,28 @@
         "\n",
         "data.NA_Sales.value_counts()"
       ],
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0        4367\n",
-              "0.02      536\n",
-              "0.03      523\n",
-              "0.01      521\n",
-              "0.05      519\n",
-              "         ... \n",
-              "3.39        1\n",
-              "2.96        1\n",
-              "3.88        1\n",
-              "4.76        1\n",
-              "10.83       1\n",
+              "0       4367\n",
+              "0.02     536\n",
+              "0.03     523\n",
+              "0.01     521\n",
+              "0.05     519\n",
+              "        ... \n",
+              "5.54       1\n",
+              "1.62       1\n",
+              "4.09       1\n",
+              "4.76       1\n",
+              "4.1        1\n",
               "Name: NA_Sales, Length: 408, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 25
         }
       ]
     },
@@ -1987,12 +1999,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oi7DGxSsmBYc",
-        "outputId": "51a3dd8b-556b-4e70-8815-084f2049b6af"
+        "outputId": "8a91a49b-1fb6-4d64-8e84-fcdf7b56b1b6"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2027,7 +2039,7 @@
         "col = data.columns[5:]\n",
         "data[col] = data[col].astype('float')"
       ],
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -2037,12 +2049,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LVz6zit3oiSc",
-        "outputId": "2c8b20b9-01ac-4538-aac9-f896b895f43e"
+        "outputId": "31b0aa0c-0b28-413d-932c-a93232600e57"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2094,7 +2106,7 @@
       "source": [
         "data = data.reset_index().drop(columns='index')"
       ],
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -2111,7 +2123,7 @@
         "\n",
         "data['Total_Sales'] = Total_sales\n"
       ],
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -2119,15 +2131,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 847
+          "height": 419
         },
         "id": "Y8FGhbuyrdXD",
-        "outputId": "0cdfaf94-c5cd-426c-aee6-93fd830f2eb4"
+        "outputId": "f0a707da-d106-43d9-fb6b-ea6dd2247807"
       },
       "source": [
         "data"
       ],
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2330,7 +2342,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 31
         }
       ]
     },
@@ -2342,7 +2354,7 @@
       "source": [
         "data.to_csv(\"vgame_eda.csv\", index=False)"
       ],
-      "execution_count": 30,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -2353,7 +2365,27 @@
       "source": [
         ""
       ],
-      "execution_count": 29,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4jB1wPIrXj0l"
+      },
+      "source": [
+        "### 번외) `Publisher`의 na를 Various로 변경했을 때\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qUyn1dHoXrlH"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
